@@ -1,6 +1,9 @@
 Changes between 2.3.1 and 2.3.2.dev
 -----------------------------------
 
+- fix issue205 - conftests in subdirs customizing
+  pytest_pycollect_makemodule now work properly
+
 - add tox.ini to pytest distribution so that ignore-dirs and others config
   bits are properly distributed for maintainers who run pytest-own tests
 
